[project]
name = "boltz_client"
version = "0.2.2"
description = "python boltz client"
license = { text = "MIT" }
authors = [{ name = "dni", email = "office@dnilabs.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.23",
  "embit>=0.7.0,<0.8",
  "click>=8",
  "websockets>=10",
]

[project.optional-dependencies]
liquid = ["wallycore==1.0.0"]

[project.urls]
Repository = "https://github.com/dni/boltz-client-python"
Homepage = "https://boltz.exchange"

[project.scripts]
boltz = "boltz_client.cli:main"

[dependency-groups]
dev = [
  "pytest-asyncio>=0.21",
  "isort>=5.10.1,<6",
  "pytest>=7.1.2,<8",
  "black>=22.6.0,<23",
  "mypy>=0.971,<2",
  "ruff>=0.6.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boltz_client"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "A", "C", "N", "UP", "RUF", "B", "S"]
ignore = ["RUF012", "RUF043"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"boltz_client/boltz.py" = ["N815", "N818"]
"test*.py" = ["S101", "S105", "S106", "S307"]
"tests/*" = ["S101", "S105", "S106", "S307", "S311"]
"tests/helpers.py" = ["S602", "S603", "S607"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = "True"
files = "boltz_client"

[tool.pytest.ini_options]
log_level = "INFO"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
  "tests"
]
